--- a/src/components/Header/headerstyles.scss
+++ b/src/components/Header/headerstyles.scss
@@ -22,5 +22,26 @@
                 margin: 0;
             }
         }
+        .callToActions {
+            position: absolute;
+            top:50%; right: 10px;
+            -webkit-transform: translateY(-50%);
+            -moz-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+        ul, li {
+            margin: 0;
+            padding: 0;
+        }
+        li {
+            list-style-type: none;
+            a {
+                font-size: 1.8rem;
+                line-height: 1;
+                color: black;
+                text-decoration: none;
+                text-transform: uppercase;
+            }
+        }
     }
 }
