Day 3 - Google SignIN

--- a/src/components/Header/headerstyles.scss
+++ b/src/components/Header/headerstyles.scss
@@ -3,6 +3,8 @@
     box-shadow: 0 2px 4px 0 rgba(0,0,0, 0.1);
 
     .wrap {
+    width: 100%;
+
         position: relative;
         height: 100%;
         max-width: 1450px;
@@ -34,7 +36,13 @@
             padding: 0;
         }
         li {
+            display: inline-block;
             list-style-type: none;
+            margin-right: 1.5rem;
+
+            &:last-child {
+                margin: 0;
+            }
             a {
                 font-size: 1.8rem;
                 line-height: 1;
