--- a/src/default.scss
+++ b/src/default.scss
@@ -43,7 +43,6 @@ a, a:hover {
 
 .main {
     width: 100%;
-    height: calc(100%);
-    max-width: 1450px;
+    height: 100%;
     margin: 0 auto;
 }
