--- a/src/components/Directory/directorystyles.scss
+++ b/src/components/Directory/directorystyles.scss
@@ -1,7 +1,8 @@
 .directory {
     height: 100%;
-    margin: 0px;
+    margin: 0px auto;
     padding: 0;
+    max-width: 1450px;
     .wrap {
         display: inline-block;
         width: 100%;
