--- a/src/components/SignUP/signupstyles.scss
+++ b/src/components/SignUP/signupstyles.scss
@@ -1,4 +1,4 @@
-.signin {
+.signup {
     display: block;
     width: 100%;
     max-width: 40.0rem;
@@ -7,6 +7,7 @@
     
     .wrap {
         padding: 10px;
+
 
         h2 {
             font-size: 2.2rem;
@@ -17,10 +18,10 @@
             width: 100%;
             text-align: center;
             padding: 0;
-            margin: 0 auto 3rem;
+            margin: 0 auto;
         }
-        .socialSignin {
-            margin: 0.5rem auto 0;
+        .formWrap {
+            margin: 3rem auto 0;
         }
     }
 }
