Day 8 - Admin Page Start

--- a/src/components/forms/Buttons/buttonstyles.scss
+++ b/src/components/forms/Buttons/buttonstyles.scss
@@ -7,7 +7,7 @@
     line-height: 1;
     font-weight: 400;
     text-transform: uppercase;
-    padding: 10px;
+    padding: 1rem 10px;
     margin: 0rem auto;
     border: 0;
     outline: none;
