--- a/src/default.scss
+++ b/src/default.scss
@@ -1,48 +1,91 @@
 html {
     font-size: 10px;
-}
-
-html,
-body {
+  }
+  
+  html,
+  body {
     padding: 0;
     margin: 0;
-}
-
-html,
-body,
-#root,
-.App,
-.fullHeight {
+  }
+  
+  html,
+  body,
+  #root,
+  .App,
+  .fullHeight {
     height: 100%;
-}
-
-
-*, ::before ::after {
+  }
+  
+  *, ::before, ::after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-}
-
-body {
+  }
+  
+  body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 1;
-}
-
-a {
+  }
+  
+  h1 {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0 auto 2rem;
+    font-size: 3.0rem;
+    line-height: 3.2rem;
+    color: #000000;
+    text-align: left;
+    font-weight: 400;
+    text-transform: uppercase;
+    border-bottom: #d3d3d3;
+  }
+  
+  a {
     text-decoration: none;
     cursor: pointer;
-}
-
-a, a:hover {
-    -webkit-transition: all 0.4s ease-in-out;
-    -moz-transition: all 0.4 ease-in-out;
-    transition: all 0.4s ease-in-out;
-}
-
-.main {
+  }
+  
+  a, a:hover {
+    -webkit-transition: all .4s ease-in-out;
+    -moz-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .main {
+    width: 100%;
+    height: calc(100% - 6.5rem);
+    margin: 0 auto;
+  }
+  
+  .controlPanel {
+    position: relative;
+    display: inline-block;
     width: 100%;
     height: 100%;
-    margin: 0 auto;
-}
+    padding: 3rem 0 0 25.0rem;
+    border-bottom: 1px solid #d3d3d3;
+  
+    .sidebar {
+      position: absolute;
+      top: 0; left: 0;
+      width: 25.0rem;
+      height: 100%;
+      z-index: 1;
+      border-right: 1px solid #d3d3d3;
+    }
+  
+    .content {
+      padding: 0 10px;
+    }
+  }
+  
+  .adminLayout {
+    height: calc(100% - 6.5rem  - 3.6rem);
+  }
+  
+  .dashboardLayout {
+    height: calc(100% - 6.5rem - 5.8rem);
+  }
