--- a/src/components/Modals/modalstyles.scss
+++ b/src/components/Modals/modalstyles.scss
@@ -3,10 +3,12 @@
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,.3);
+  background-color: rgba(0,0,0,.5);
+  z-index: 1;
 }
 
 .modal {
+  z-index: 2;
   position: absolute;
   top: 50%; left: 50%;
   -webkit-transform: translate(-50%, -50%);
