--- a/src/default.scss
+++ b/src/default.scss
@@ -56,7 +56,7 @@ html {
   
   .main {
     width: 100%;
-    height: calc(100% - 6.5rem);
+    height: calc(100% - 4.5rem);
     margin: 0 auto;
   }
   
@@ -65,7 +65,7 @@ html {
     display: inline-block;
     width: 100%;
     height: 100%;
-    padding: 3rem 0 0 25.0rem;
+    padding: 1rem 0 0 25.0rem;
     border-bottom: 1px solid #d3d3d3;
   
     .sidebar {
@@ -78,14 +78,14 @@ html {
     }
   
     .content {
-      padding: 0 10px;
+      padding: 0;
     }
   }
   
   .adminLayout {
-    height: calc(100% - 6.5rem  - 3.6rem);
+    height: calc(100% - 6.5rem - 6rem);
   }
   
   .dashboardLayout {
-    height: calc(100% - 6.5rem - 5.8rem);
+    height: calc(100% - 6.5rem - 6rem);
   }
