--- a/src/components/Header/headerstyles.scss
+++ b/src/components/Header/headerstyles.scss
@@ -4,7 +4,6 @@
 
     .wrap {
     width: 100%;
-
         position: relative;
         height: 100%;
         max-width: 1450px;
@@ -24,6 +23,37 @@
                 margin: 0;
             }
         }
+        nav {
+            display: block;
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+
+            ul, ul li {
+                padding: 0;
+                margin: 0;
+                height: 100%;
+            }
+            ul {
+                text-align: center;
+                li {
+                    display: inline-block;
+                    list-style-type: none;
+                    cursor: pointer;
+                    margin: 0 1rem;
+                    a {
+                        font-size: 1.8rem;
+                        line-height: 6.5rem;
+                        vertical-align: middle;
+                        color: black;
+                        text-decoration: none;
+                        text-transform: uppercase;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
         .callToActions {
             position: absolute;
             top:50%; right: 10px;
@@ -39,6 +69,8 @@
             display: inline-block;
             list-style-type: none;
             margin-right: 1.5rem;
+            cursor: pointer;
+
 
             &:last-child {
                 margin: 0;
@@ -49,6 +81,7 @@
                 color: black;
                 text-decoration: none;
                 text-transform: uppercase;
+                cursor: pointer;
             }
         }
     }
