Day x - Product Pagination / Infinite Scroll

--- a/src/components/ProductResults/productstyles.scss
+++ b/src/components/ProductResults/productstyles.scss
@@ -6,8 +6,9 @@
     display: block;
     width: 100%;
     padding: 0;
-    margin: 2rem 2;
+    margin: 2rem auto;
     text-align: center;
+    max-width: 1450px;
   
     .productResults {
       display: flex;
