--- a/src/components/ProductResults/productstyles.scss
+++ b/src/components/ProductResults/productstyles.scss
@@ -54,6 +54,10 @@
           list-style-type: none;
           text-align: center;
           margin: 0 0 .5rem;
+
+          a {
+            color: black;
+          }
   
           .name {
             font-size: 2.2rem;
