Day X - Checkout Page

--- a/src/default.scss
+++ b/src/default.scss
@@ -57,7 +57,7 @@ html {
   .main {
     width: 100%;
     height: calc(100% - 4.5rem);
-    margin: 0 auto;
+    margin: 0rem auto; 
   }
   
   .controlPanel {
